crates/banshee_parser/src/snapshots/banshee_parser__tests__jsonpath_exists.snap
---
source: crates/banshee_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..42
  SELECT_STMT@0..42
    SELECT_KW@0..6 "SELECT"
    WHITESPACE@6..7 " "
    SELECT_ITEM_LIST@7..9
      SELECT_ITEM@7..9
        STAR_EXPR@7..9
          STAR@7..8 "*"
          WHITESPACE@8..9 " "
    FROM_CLAUSE@9..20
      FROM_KW@9..13 "FROM"
      WHITESPACE@13..14 " "
      TABLE_REF@14..20
        IDENT@14..19 "users"
        WHITESPACE@19..20 " "
    WHERE_CLAUSE@20..42
      WHERE_KW@20..25 "WHERE"
      WHITESPACE@25..26 " "
      BINARY_EXPR@26..42
        COLUMN_REF@26..31
          IDENT@26..30 "data"
          WHITESPACE@30..31 " "
        AT_QUESTION@31..33 "@?"
        WHITESPACE@33..34 " "
        JSONPATH_LITERAL@34..42
          JSONPATH_CONTENT@34..42
            JP_QUOTE@34..35 "'"
            JP_DOLLAR@35..36 "$"
            JP_DOT@36..37 "."
            JP_IDENT@37..41 "name"
            JP_QUOTE@41..42 "'"
