crates/banshee_parser/src/snapshots/banshee_parser__tests__select_lateral_subquery.snap
---
source: crates/banshee_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..49
  SELECT_STMT@0..49
    SELECT_KW@0..6 "SELECT"
    WHITESPACE@6..7 " "
    SELECT_ITEM_LIST@7..9
      SELECT_ITEM@7..9
        STAR_EXPR@7..9
          STAR@7..8 "*"
          WHITESPACE@8..9 " "
    FROM_CLAUSE@9..49
      FROM_KW@9..13 "FROM"
      WHITESPACE@13..14 " "
      TABLE_REF@14..49
        LATERAL_KW@14..21 "LATERAL"
        WHITESPACE@21..22 " "
        L_PAREN@22..23 "("
        SELECT_STMT@23..43
          SELECT_KW@23..29 "SELECT"
          WHITESPACE@29..30 " "
          SELECT_ITEM_LIST@30..33
            SELECT_ITEM@30..33
              COLUMN_REF@30..33
                IDENT@30..32 "id"
                WHITESPACE@32..33 " "
          FROM_CLAUSE@33..43
            FROM_KW@33..37 "FROM"
            WHITESPACE@37..38 " "
            TABLE_REF@38..43
              IDENT@38..43 "users"
        R_PAREN@43..44 ")"
        WHITESPACE@44..45 " "
        AS_KW@45..47 "AS"
        WHITESPACE@47..48 " "
        IDENT@48..49 "u"
